fixed minor bugs

--- a/team_marketing.html
+++ b/team_marketing.html
@@ -130,6 +130,16 @@
                                 </div>
                                 <div class="col-md-4" align="center">    
                                     <div class="profile">
+                                        <img class="profile_pic" src="img/team/Shailesh Lelran.jpg">
+                                        <h2>Shailesh Lelran<span style="font-size:24px">(POR)(Head of Corporate communications)</span></h2>
+                                        <div id="social" class="social">
+                                            <li><a class="fab fa-facebook" href="https://www.facebook.com/shello.shailesh"></a></li>
+                                            <li><a class="fab fa-linkedin" href="https://www.linkedin.com/in/shailesh-lelran/"></a></li>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4" align="center">    
+                                    <div class="profile">
                                         <img class="profile_pic" src="img/team/Nitish.JPG">
                                         <h2>Nitish Kumar</h2>
                                            <div id="social" class="social">
@@ -170,16 +180,6 @@
                                         <div id="social" class="social">
                                             <li><a class="fab fa-facebook " href="https://www.facebook.com/shubhendu.suraj"></a></li>
                                             <li><a class="fab fa-linkedin" href="https://www.linkedin.com/in/shubhendu-kumar-544b09126/"></a></li>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4" align="center">    
-                                    <div class="profile">
-                                        <img class="profile_pic" src="img/team/Shailesh Lelran.jpg">
-                                        <h2>Shailesh Lelran</h2>
-                                        <div id="social" class="social">
-                                            <li><a class="fab fa-facebook" href="https://www.facebook.com/shello.shailesh"></a></li>
-                                            <li><a class="fab fa-linkedin" href="https://www.linkedin.com/in/shailesh-lelran/"></a></li>
                                         </div>
                                     </div>
                                 </div>
