made some changes in team

--- a/team_marketing.html
+++ b/team_marketing.html
@@ -131,7 +131,7 @@
                         <div class="col-md-4" align="center">    
                             <div class="profile">
                                 <img class="profile_pic" src="img/team/Shailesh Lelran.jpg">
-                                <h2>Shailesh Lelran<span style="font-size:24px">(POR)(Head of Corporate communications)</span></h2>
+                                <h2>Shailesh Lelran<span style="font-size:24px">(Head of Corporate communications)</span></h2>
                                 <div id="social" class="social">
                                     <li><a class="fab fa-facebook" href="https://www.facebook.com/shello.shailesh"></a></li>
                                     <li><a class="fab fa-linkedin" href="https://www.linkedin.com/in/shailesh-lelran/"></a></li>
