gri-pump sponsor added

--- a/sponsor.html
+++ b/sponsor.html
@@ -182,6 +182,12 @@
                                 <img src="img/sponsors/spon3.png" style="padding-top: 11vh; transform: scale(.7); margin-top: -52vh; height: 41%;">
                             </div>
 
+                        </div>      
+                        <div class="row sponsor">
+                            <div class="col-md-4 ">
+                                <img src="img/sponsors/gri-pump.png" style="margin-top: -186vh;height: 19vh;width: 22vw;padding-left: 4vw">
+                            </div>
+
                         </div>        
                     </div>
                     <!-- footer starts here -->
