modified sponsors page

--- a/sponsor.html
+++ b/sponsor.html
@@ -123,73 +123,64 @@
 
         <!-- current sponser section starts here -->
         <div id="Current" class="tabcontent">
-
             <div class="tab-content" id="v-pills-tabContent">
                 <div class="tab-pane fade show active" id="management" role="tabpanel" aria-labelledby="v-pills-home-tab">
-
-                    <div class="container-fluid former_s gold">
-                        <h3  style="text-align: center;color: gold; text-decoration: underline;">GOLD</h3>
-                        <div class="row sponsors_list">
-                            <div class="col-md-2"></div>
-                            <div class="col-md-3 sponsor sp1" style="padding-bottom: 0;">
-                                <img src="img/1.jpg" style="transform: scale(.8); padding-left: 1.5vw; margin-top: -6vh;">
-                            </div>
-                            <div class="col-md-2"></div>
-                            <div class="col-md-3 sponsor sp1" style="padding-bottom: 0;">
-                                <img src="img/sponsors/melasta.jpg" style="transform: scale(.7); padding-left: 1.5vw; margin-top:1vh;">
-                            </div>
-                            <div class="col-md-2"></div>
-
-                        </div>        
-                    </div>
-                    <div class="container-fluid former_s silver">
-                        <h3 class="text-center" style="color: silver; text-decoration: underline;">SILVER</h3>
-                        <div class="row sponsors_list">
-                            <div class="col-md-2"></div>
-                            <div class="col-md-3 sponsor sp1">
-                                <img src="img/sponsors/cft.png" style="padding-left: 13vw; padding-top: 1vh;" >
-                            </div>
-                                <div class="col-md-2"></div>
-                                <div class="col-md-3 sponsor ">
-                                    <img src="img/sponsors/gl.jpg">
+                    <div class="sponsors-all-list">
+                        <div>
+                            <h3  style="text-align: center;color: gold; text-decoration: underline;font-size: 2.5rem">GOLD</h3>
+                            <div class="gold-main-div">
+                                <div>
+                                    <img src="img/1.jpg">
                                 </div>
-                                <div class="col-md-2"></div>
-
-                        </div>  
-                    </div>
-                    <div class="container-fluid former_s bronze">
-                        <h3 class="text-center" style="color: #CD7F32; text-decoration: underline;">BRONZE</h3>
-                        <div class="row sponsors_list">
-                            <div class="col-md-4 sponsor ">
-                                <img src="img/sponsors/mathworks.jpg" style="height: 10rem; padding-left: 6vw;">
-                            </div>
-                            <div class="col-md-4 sponsor ">
-                                <img src="img/sponsors/sw.png" style="padding-left: 4vw; padding-top: 1vh; height: 43%;">
-                            </div>
-                            <div class="col-md-4 sponsor ">
-                                <img src="img/sponsors/ipg.jpg" style="padding-left: 5vw; padding-top: 0vh; height: 50%;">
+                                <div>
+                                    <img src="img/sponsors/melasta.jpg">
+                                </div>
                             </div>
                         </div>
-                        <div class="row sponsor">
-                            <div class="col-md-4 sponsor ">
-                                <img src="img/sponsors/mrf.png" style="padding-top: 0vh; padding-left: 2vw;
-                                margin-top: -47vh; height: 13%; transform: scale(.7);">
-                            </div>
-                            <div class="col-md-4 sponsor ">
-                                <img src="img/sponsors/cen.gif" style="padding-top: 0vh; padding-left: 7vw; margin-top: -45vh;">
-                            </div>
-                            <div class="col-md-4 sponsor ">
-                                <img src="img/sponsors/spon3.png" style="padding-top: 11vh; transform: scale(.7); margin-top: -52vh; height: 41%;">
-                            </div>
 
-                        </div>      
-                        <div class="row sponsor">
-                            <div class="col-md-4 ">
-                                <img src="img/sponsors/gri-pump.png" style="margin-top: -186vh;height: 19vh;width: 22vw;padding-left: 4vw">
+                        <div>
+                            <h3 class="text-center" style="color: silver; text-decoration: underline;font-size: 2.5rem">SILVER</h3>
+                            <div class="silver-main-div">
+                                <div>
+                                    <img src="img/sponsors/cft.png">
+                                </div>
+                                <div>
+                                    <img src="img/sponsors/gl.jpg">
+                                </div>
                             </div>
+                        </div>
 
-                        </div>        
+                        <div>
+                            <h3 class="text-center" style="color: #CD7F32; text-decoration: underline;font-size: 2.5rem">BRONZE</h3>
+                            <div class="bronze-main-div">
+                                <div>
+                                    <img src="img/sponsors/mathworks.jpg">
+                                </div>
+                                <div>
+                                    <img src="img/sponsors/sw.png">
+                                </div>
+                                <div>
+                                    <img src="img/sponsors/ipg.jpg" style="height: 100px">
+                                </div>
+                                <div>
+                                    <img src="img/sponsors/mrf.png" style="height: 60px">
+                                </div>
+                                <div>
+                                    <img src="img/sponsors/cen.gif">
+                                </div>
+                                <div>
+                                    <img src="img/sponsors/spon3.png" style="height: 100px">
+                                </div>
+                                <div>
+                                    <img src="img/sponsors/gri-pump.png">
+                                </div>
+                                <div>
+                                    <img src="img/sponsors/coroplast.png" style="height: 60px">
+                                </div>
+                            </div>
+                        </div>
                     </div>
+
                     <!-- footer starts here -->
                     <div class="container-fluid footer" id="contact">
                         <div class="row footer_content">
