--- a/sponsor.html
+++ b/sponsor.html
@@ -177,6 +177,15 @@
                                 <div>
                                     <img src="img/sponsors/coroplast.png" style="height: 60px">
                                 </div>
+                                <div>
+                                    <img src="img/sponsors/sensata.png">
+                                </div>
+                                <div>
+                                    <img src="img/sponsors/pcbpower.png">
+                                </div>
+                                <div>
+                                    <img src="img/sponsors/gigavac.jpeg">
+                                </div>
                             </div>
                         </div>
                     </div>
