--- a/team_marketing.html
+++ b/team_marketing.html
@@ -192,7 +192,7 @@
                     <p><i class="fas fa-home"></i> Mechanical & Industrial Engineering Department, IIT Roorkee
                     247667 , Uttarakhand, India</p>
 
-                    <p><i class="fas fa-mobile"></i> Mobile<br>Harshit Singh : +91-8650267812,<br> Aseem Kumar: +91-8658259288</p>
+                <p><i class="fas fa-mobile"></i> Mobile<br>Mohd. Sharib: +91-7457098819,<br>Mohd. Tahir: +91-7985059250</p>
 
                     <p><i class="fas fa-envelope"></i> Email : iitrms.iitr@gmail.com</p>
                 </div> 
